Wed Sep 16 00:10:05 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Majordomo.pm (_re_match): Give better warning on bad
 	regexps.

Tue Sep 15 23:36:08 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/List.pm (check_dup): Fix tainting bug.

Mon Sep 14 00:44:27 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Majordomo.pm (_subscribe): Adding 'password' function made
 	"{password}" ambiguous.  Sigh.
	(_reg_add): Fix update/replace confusion.

	* lib/Mj/Access.pm (_d_advertise): Clean up; call _a_allow or
 	_a_deny as appropriate instead of returning magic variables.
	(_a_denymess): New function to deny and return a message.
	(_d_password): New function: default access controls for password.

	* lib/Majordomo.pm (_subscribe): Generate the password.
	(_register): Ditto.
	(_reg_add): Don't generate passwords here.
	(password): New function: change a registered user's password.

	* files/INDEX.pl: Add 'new_password' file.

	* lib/mj_cf_data.pl: Add 'password_min_length'.

	* lib/Mj/Format.pm (password): New function; show output of
 	password function.

	* lib/Mj/TextOutput.pm (password): New function; let user change
 	their password.

	* lib/Mj/CommandProps.pm: Add password command entry.

Sun Sep 13 02:09:14 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Resend.pm (_r_ck_body): Majordomo::_re_match doesn't need
 	a safe compartment.
	(_describe_taboo): Make sure $match is defined before modifying
 	it.

	* lib/Mj/Token.pm (consult): Missed a %~%.

	* lib/Mj/Parser.pm: Import necessary CommandProps functions and
 	unqualify the relevant function calls.

	* lib/Mj/Access.pm (_a_default): Convert to calling
 	Mj::CommandProps::access_def to access default actions instead of
 	using locally defined variables.

	* lib/Mj/Config.pm: Remove %requests; call CommandProps functions
 	instead.  Replace all references to %requests with appropriate
 	calls.
	(_compile_rule): Give more useful message for illegal variables.